--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "author": "Marianne Rario",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "dotenv": "^14.3.2",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^6.1.8",
-    "dotenv": "^14.3.2"
+    "mongoose": "^6.1.8"
   },
   "devDependencies": {
-
     "nodemon": "^2.0.15"
   }
 }
